[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-imap = { version = "0.6.0", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.4.0", default-features = false, features = ["runtime-tokio"] }
env_logger = "0.10.0"
futures = "0.3.26"
log = "0.4.17"
tokio = { version = "1.25.0", features = ["full"] }
